Fix redirects: index->cold-email, button->checker

--- a/cold-email-merchantpro.html
+++ b/cold-email-merchantpro.html
@@ -197,7 +197,7 @@
                                         <table role="presentation" cellspacing="0" cellpadding="0" border="0" align="center">
                                             <tr>
                                                 <td style="border-radius: 6px; background-color: #f69e06;">
-                                                    <a href="https://blackkaiman.github.io/fulloutmail/fullout-checker.html" target="_blank" style="display: inline-block; padding: 14px 25px; font-size: 14px; font-weight: bold; color: #ffffff; text-decoration: none; border-radius: 6px;">
+                                                    <a href="fullout-checker.html" target="_blank" style="display: inline-block; padding: 14px 25px; font-size: 14px; font-weight: bold; color: #ffffff; text-decoration: none; border-radius: 6px;">
                                                         🔍 ANALIZEAZĂ SITE-UL →
                                                     </a>
                                                 </td>
