--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url=fullout-checker.html">
+    <meta http-equiv="refresh" content="0; url=cold-email-merchantpro.html">
     <title>Redirecting...</title>
 </head>
 <body>
-    <script>window.location.href = "fullout-checker.html";</script>
+    <script>window.location.href = "cold-email-merchantpro.html";</script>
 </body>
 </html>
