Add emojis to CTA section and Contact menu

--- a/fullout-checker.html
+++ b/fullout-checker.html
@@ -1392,7 +1392,7 @@
                         <li><a href="https://www.fulloutmedia.ro/cariere/">Cariere</a></li>
                         <li><a href="https://www.fulloutmedia.ro/portofoliu/">Portofoliu</a></li>
                         <li><a href="https://www.fulloutmedia.ro/certificari/">Certificari</a></li>
-                        <li><a href="https://www.fulloutmedia.ro/contact/">Contact</a></li>
+                        <li><a href="https://www.fulloutmedia.ro/contact/">📩 Contact</a></li>
                     </ul>
                     
                     <a href="https://www.fulloutmedia.ro/contact" class="btn-primary">
@@ -1599,10 +1599,10 @@
             
             <!-- CTA Section -->
             <div class="cta-section">
-                <h2>Vrei să rezolvi aceste probleme?</h2>
+                <h2>⚠️ Vrei să rezolvi aceste probleme?</h2>
                 <p>Programează o discuție gratuită cu echipa noastră și primești o strategie personalizată pentru creșterea afacerii tale online.</p>
                 <a href="https://www.fulloutmedia.ro/contact" class="cta-btn">
-                    <span>Programează o discuție</span>
+                    <span>📩 Programează o discuție</span>
                     <i class="fa-regular fa-arrow-right"></i>
                 </a>
             </div>
